test/scc/stmt/semantic-errors/029.t
void test()
{
    while(1)
        int a;
}